--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "n8n-nodes-aimfox",
-  "version": "1.0.12",
+  "version": "1.0.13",
   "description": "n8n nodes for Aimfox",
   "keywords": [
     "n8n-community-node-package"
@@ -17,7 +17,8 @@
   },
   "main": "index.js",
   "scripts": {
-    "build": "tsc && gulp build:icons",
+    "clean": "rm -rf dist",
+    "build": "npm run clean && tsc && gulp build:icons",
     "dev": "tsc --watch",
     "format": "prettier nodes credentials --write",
     "lint": "eslint nodes credentials package.json",
